# simd-benchmarks

./: CMakeLists.txt  README.md  cmp.cpp  normalize.cpp  union.cpp
